--- a/develop/index.html
+++ b/develop/index.html
@@ -21,12 +21,12 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="style.css" />
-    <title>Work Day Scheduler</title>
+    <title>Day Scheduler</title>
   </head>
 
   <body>
     <header class="p-5 mb-4">
-      <h1 class="display-3">Work Day Scheduler</h1>
+      <h1 class="display-3">Day Scheduler</h1>
       <p class="lead">A simple calendar app for scheduling your work day</p>
       <p id="currentDay" class="lead"></p>
     </header>
@@ -45,7 +45,7 @@
       <div id="hour-9" class="row time-block past">
         <div class="col-2 col-md-1 hour text-center py-3">9AM</div>
         <textarea class="col-8 col-md-10 description" rows="3"> </textarea>
-        <button class="btn saveBtn col-2 col-md-1" aria-label="save">
+        <button class="btn saveBtn col-2 col-md-1" id="saveBtn" aria-label="save">
           <i class="fas fa-save" aria-hidden="true"></i>
         </button>
       </div>
@@ -54,7 +54,7 @@
       <div id="hour-10" class="row time-block present">
         <div class="col-2 col-md-1 hour text-center py-3">10AM</div>
         <textarea class="col-8 col-md-10 description" rows="3"> </textarea>
-        <button class="btn saveBtn col-2 col-md-1" aria-label="save">
+        <button class="btn saveBtn col-2 col-md-1" id="saveBtn" aria-label="save">
           <i class="fas fa-save" aria-hidden="true"></i>
         </button>
       </div>
@@ -63,10 +63,58 @@
       <div id="hour-11" class="row time-block future">
         <div class="col-2 col-md-1 hour text-center py-3">11AM</div>
         <textarea class="col-8 col-md-10 description" rows="3"> </textarea>
-        <button class="btn saveBtn col-2 col-md-1" aria-label="save">
+        <button class="btn saveBtn col-2 col-md-1" id="saveBtn" aria-label="save">
           <i class="fas fa-save" aria-hidden="true"></i>
         </button>
       </div>
+    </div>
+
+    <div id="hour-12" class="row time-block present">
+      <div class="col-2 col-md-1 hour text-center py-3">12PM</div>
+      <textarea class="col-8 col-md-10 description" rows="3"> </textarea>
+      <button class="btn saveBtn col-2 col-md-1" id="saveBtn" aria-label="save">
+        <i class="fas fa-save" aria-hidden="true"></i>
+      </button>
+    </div>
+
+    <div id="hour-13" class="row time-block present">
+      <div class="col-2 col-md-1 hour text-center py-3">1PM</div>
+      <textarea class="col-8 col-md-10 description" rows="3"> </textarea>
+      <button class="btn saveBtn col-2 col-md-1" id="saveBtn" aria-label="save">
+        <i class="fas fa-save" aria-hidden="true"></i>
+      </button>
+    </div>
+
+    <div id="hour-14" class="row time-block present">
+      <div class="col-2 col-md-1 hour text-center py-3">2PM</div>
+      <textarea class="col-8 col-md-10 description" rows="3"> </textarea>
+      <button class="btn saveBtn col-2 col-md-1" id="saveBtn" aria-label="save">
+        <i class="fas fa-save" aria-hidden="true"></i>
+      </button>
+    </div>
+
+    <div id="hour-15" class="row time-block present">
+      <div class="col-2 col-md-1 hour text-center py-3">3PM</div>
+      <textarea class="col-8 col-md-10 description" rows="3"> </textarea>
+      <button class="btn saveBtn col-2 col-md-1" id="saveBtn" aria-label="save">
+        <i class="fas fa-save" aria-hidden="true"></i>
+      </button>
+    </div>
+
+    <div id="hour-16" class="row time-block present">
+      <div class="col-2 col-md-1 hour text-center py-3">4PM</div>
+      <textarea class="col-8 col-md-10 description" rows="3"> </textarea>
+      <button class="btn saveBtn col-2 col-md-1" id="saveBtn" aria-label="save">
+        <i class="fas fa-save" aria-hidden="true"></i>
+      </button>
+    </div>
+
+    <div id="hour-17" class="row time-block present">
+      <div class="col-2 col-md-1 hour text-center py-3">5PM</div>
+      <textarea class="col-8 col-md-10 description" rows="3"> </textarea>
+      <button class="btn saveBtn col-2 col-md-1" id="saveBtn" aria-label="save">
+        <i class="fas fa-save" aria-hidden="true"></i>
+      </button>
     </div>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
