--- a/develop/index.html
+++ b/develop/index.html
@@ -32,66 +32,66 @@
       <p id="timeDate" class="lead"></p>
     </header>
 
-    <div id="hour-10" class="row time-block present">
+    <div id="hour-10" class="row time-block">
       <div class="col-2 col-md-1 hour text-center py-3">10:00 AM</div>
       <textarea class="col-8 col-md-10 description" rows="3"></textarea>
-      <button class="btn saveBtn col-2 col-md-1" area-label="save">
+      <button class="saveBtn col-2 col-md-1" area-label="save">
         <i class="fas fa-save" aria-hidden="true"></i>
       </button>
     </div>
 
-    <div id="hour-11" class="row time-block present">
+    <div id="hour-11" class="row time-block ">
       <div class="col-2 col-md-1 hour text-center py-3">11:00 AM</div>
       <textarea class="col-8 col-md-10 description" rows="3"></textarea>
-      <button class="btn saveBtn col-2 col-md-1" area-label="save">
+      <button class="saveBtn col-2 col-md-1" area-label="save">
         <i class="fas fa-save" aria-hidden="true"></i>
       </button>
     </div>
 
-    <div id="hour-12" class="row time-block present">
+    <div id="hour-12" class="row time-block ">
       <div class="col-2 col-md-1 hour text-center py-3">12:00 PM</div>
       <textarea class="col-8 col-md-10 description" rows="3"></textarea>
-      <button class="btn saveBtn col-2 col-md-1" area-label="save">
+      <button class="saveBtn col-2 col-md-1" area-label="save">
         <i class="fas fa-save" aria-hidden="true"></i>
       </button>
     </div>
 
-    <div id="hour-13" class="row time-block present">
+    <div id="hour-13" class="row time-block ">
       <div class="col-2 col-md-1 hour text-center py-3">1:00 PM</div>
       <textarea class="col-8 col-md-10 description" rows="3"></textarea>
-      <button class="btn saveBtn col-2 col-md-1" area-label="save">
+      <button class="saveBtn col-2 col-md-1" area-label="save">
         <i class="fas fa-save" aria-hidden="true"></i>
       </button>
     </div>
 
-    <div id="hour-14" class="row time-block present">
+    <div id="hour-14" class="row time-block ">
       <div class="col-2 col-md-1 hour text-center py-3">2:00 PM</div>
       <textarea class="col-8 col-md-10 description" rows="3"></textarea>
-      <button class="btn saveBtn col-2 col-md-1" area-label="save">
+      <button class="saveBtn col-2 col-md-1" area-label="save">
         <i class="fas fa-save" aria-hidden="true"></i>
       </button>
     </div>
 
-    <div id="hour-15" class="row time-block present">
+    <div id="hour-15" class="row time-block ">
       <div class="col-2 col-md-1 hour text-center py-3">3:00 PM</div>
       <textarea class="col-8 col-md-10 description" rows="3"></textarea>
-      <button class="btn saveBtn col-2 col-md-1" area-label="save">
+      <button class="saveBtn col-2 col-md-1" area-label="save">
         <i class="fas fa-save" aria-hidden="true"></i>
       </button>
     </div>
 
-    <div id="hour-16" class="row time-block present">
+    <div id="hour-16" class="row time-block ">
       <div class="col-2 col-md-1 hour text-center py-3">4:00 PM</div>
       <textarea class="col-8 col-md-10 description" rows="3"></textarea>
-      <button class="btn saveBtn col-2 col-md-1" area-label="save">
+      <button class="saveBtn col-2 col-md-1" area-label="save">
         <i class="fas fa-save" aria-hidden="true"></i>
       </button>
     </div>
 
-    <div id="hour-17" class="row time-block present">
+    <div id="hour-17" class="row time-block">
       <div class="col-2 col-md-1 hour text-center py-3">5:00 PM</div>
       <textarea class="col-8 col-md-10 description" rows="3"></textarea>
-      <button class="btn saveBtn col-2 col-md-1" area-label="save">
+      <button class="saveBtn col-2 col-md-1" area-label="save">
         <i class="fas fa-save" aria-hidden="true"></i>
       </button>
     </div>
